Fixed message alignment since the last update broke it -_-

--- a/Visuals/style.css
+++ b/Visuals/style.css
@@ -264,7 +264,7 @@ span:focus {
 }
 
 #message {
-    margin-left: -54px;
+    margin-left: -35px;
     margin-top: 25px;
 }
 
